add base activity components. Finish implementation

--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -16,7 +16,16 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
+        <activity
+            android:name=".ItemInfoActivity"
+            android:label="@string/title_item_info">
+            <!-- TODO aggiungere android:parentActivityName="com.example.myfirstapp.MainActivity" -->
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"/>
+                <!-- TODO aggiungere quando integrato la parent activity android:value="com.example.myfirstapp.MainActivity" -->
+        </activity>
     </application>
 
 </manifest>
