--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY" />
             <!-- TODO Aggiungere android:value="com.example.myfirstapp.MainActivity" -->
         </activity>
-        <activity android:name=".adapters.GpsLoadingActivity"></activity>
+        <activity android:name=".GpsLoadingActivity"></activity>
     </application>
 
 </manifest>
