comment meta data blocking activity to launch

--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
             <!-- TODO aggiungere android:parentActivityName="com.example.myfirstapp.MainActivity" -->
             <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data android:name="android.support.PARENT_ACTIVITY" />
+            <!--<meta-data android:name="android.support.PARENT_ACTIVITY" />-->
             <!-- TODO aggiungere quando integrato la parent activity android:value="com.example.myfirstapp.MainActivity" -->
         </activity>
         <activity android:name=".MenuActivity" />
@@ -37,7 +37,7 @@
 
             <!-- TODO Aggiungere android:parentActivityName="com.example.myfirstapp.MainActivity" -->
             <!-- Parent activity meta-data to support 4.0 and lower -->
-            <meta-data android:name="android.support.PARENT_ACTIVITY" />
+            <!--<meta-data android:name="android.support.PARENT_ACTIVITY" />-->
             <!-- TODO Aggiungere android:value="com.example.myfirstapp.MainActivity" -->
         </activity>
         <activity android:name=".GpsLoadingActivity" />
