first commit. init new empty activity

--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY" />
             <!-- TODO aggiungere quando integrato la parent activity android:value="com.example.myfirstapp.MainActivity" -->
         </activity>
-        <activity android:name=".MenuActivity"></activity>
+        <activity android:name=".MenuActivity" />
         <activity
             android:name=".QrCodeScannerActivity"
             android:label="@string/title_qr_code_scanner_login">
@@ -40,7 +40,8 @@
             <meta-data android:name="android.support.PARENT_ACTIVITY" />
             <!-- TODO Aggiungere android:value="com.example.myfirstapp.MainActivity" -->
         </activity>
-        <activity android:name=".GpsLoadingActivity"></activity>
+        <activity android:name=".GpsLoadingActivity" />
+        <activity android:name=".PaymentTypeActivity"></activity>
     </application>
 
 </manifest>
