--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -52,19 +52,20 @@
             android:name=".AddToppingsActivity"
             android:theme="@style/DialogTheme">
         </activity>
-        <activity android:name=".GpsLoadingActivity" />
+
         <activity android:name=".OrderStatusActivity"/>
 
         <activity android:name=".PaymentTypeActivity"></activity>
 
-        <activity android:name=".DeliveryPlaceActivity">
+        <activity android:name=".DeliveryPlaceActivity"/>
 
+        <activity android:name=".RateOrderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"></action>
                 <action android:name="android.intent.action.LAUNCHER"></action>
             </intent-filter>
-
         </activity>
+
     </application>
 
 </manifest>
