--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -9,38 +9,52 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+
+        <activity android:name=".GpsLoadingActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".SearchBarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:parentActivityName="it.unitn.disi.lpsmt.idabere.GpsLoadingActivity"
+                android:value="it.unitn.disi.lpsmt.idabere.GpsLoadingActivity"/>
             <meta-data
                 android:name="android.app.search_bar_searchable"
                 android:resource="@xml/search_bar_searchable" />
+
         </activity>
+
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" />
+
         <activity
             android:name=".ItemInfoActivity"
             android:label="@string/title_item_info">
-
-            <!-- TODO aggiungere android:parentActivityName="com.example.myfirstapp.MainActivity" -->
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <!-- <meta-data android:name="android.support.PARENT_ACTIVITY" /> -->
-            <!-- TODO aggiungere quando integrato la parent activity android:value="com.example.myfirstapp.MainActivity" -->
+             <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:parentActivityName="it.unitn.disi.lpsmt.idabere.MenuActivity"
+                    android:value="it.unitn.disi.lpsmt.idabere.MenuActivity"/>
         </activity>
+
         <activity android:name=".MenuActivity" />
+
         <activity
             android:name=".QrCodeScannerActivity"
             android:label="@string/title_qr_code_scanner_login">
-
-            <!-- TODO Aggiungere android:parentActivityName="com.example.myfirstapp.MainActivity" -->
-            <!-- Parent activity meta-data to support 4.0 and lower -->
-            <!-- <meta-data android:name="android.support.PARENT_ACTIVITY" /> -->
-            <!-- TODO Aggiungere android:value="com.example.myfirstapp.MainActivity" -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:parentActivityName="it.unitn.disi.lpsmt.idabere.SearchBarActivity"
+                android:value="it.unitn.disi.lpsmt.idabere.SearchBarActivity"/>
         </activity>
-        <activity android:name=".GpsLoadingActivity" />
+
         <activity
             android:name=".AddToppingsActivity"
             android:theme="@style/DialogTheme">
@@ -62,10 +76,6 @@
         <activity android:name=".RateOrderActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <action android:name="android.intent.action.LAUNCHER" />
             </intent-filter>
         </activity>
 
