--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -32,12 +32,17 @@
         </activity>
 
         <activity
-            android:name=".MenuActivity"
-            android:label="@string/title_activity_menu"/>
+            android:name=".QrCodeScannerActivity"
+            android:label="@string/title_qr_code_scanner_login">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:parentActivityName="it.unitn.disi.lpsmt.idabere.SearchBarActivity"
+                android:value="it.unitn.disi.lpsmt.idabere.SearchBarActivity"/>
+        </activity>
 
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+            android:name=".MenuActivity"
+            android:label="@string/title_activity_menu"/>
 
         <activity
             android:name=".ItemInfoActivity"
@@ -48,20 +53,11 @@
                     android:value="it.unitn.disi.lpsmt.idabere.MenuActivity"/>
         </activity>
 
-        <activity
-            android:name=".QrCodeScannerActivity"
-            android:label="@string/title_qr_code_scanner_login">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:parentActivityName="it.unitn.disi.lpsmt.idabere.SearchBarActivity"
-                android:value="it.unitn.disi.lpsmt.idabere.SearchBarActivity"/>
-        </activity>
 
         <activity
             android:name=".AddToppingsActivity"
             android:theme="@style/DialogTheme">
         </activity>
-
 
         <activity
             android:name=".ReviewOrderActivity"
@@ -71,11 +67,18 @@
                 android:resource="@xml/search_bar_searchable" />
         </activity>
 
-        <activity android:name=".OrderStatusActivity"/>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" />
+
+
+        <activity android:name=".DeliveryPlaceActivity"/>
 
         <activity android:name=".PaymentTypeActivity"></activity>
 
-        <activity android:name=".DeliveryPlaceActivity"/>
+        <activity android:name=".CheckoutActivity"></activity>
+
+        <activity android:name=".OrderStatusActivity"/>
 
         <activity android:name=".RateOrderActivity">
             <intent-filter>
