--- a/PROVA_SERVER_NODEJS/package.json
+++ b/PROVA_SERVER_NODEJS/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ale",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.15.3",
+    "mysql": "^2.13.0",
+    "winston": "^2.3.1"
+  }
 }
