--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -17,15 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activities.SearchBarActivity">
+        <activity android:name=".activities.ListBarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <meta-data
                 android:name="android.app.search_bar_searchable"
                 android:resource="@xml/search_bar_searchable" />
-
         </activity>
 
         <activity
@@ -34,7 +34,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:parentActivityName="it.unitn.disi.lpsmt.idabere.SearchBarActivity"
-                android:value="it.unitn.disi.lpsmt.idabere.activities.SearchBarActivity"/>
+                android:value="it.unitn.disi.lpsmt.idabere.activities.ListBarActivity"/>
         </activity>
 
         <activity
