--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.LAUNCHER"/>
             </intent-filter>
             <meta-data
                 android:name="android.app.search_bar_searchable"
