--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity
             android:name=".activities.ListBarActivity"
-            android:label="@string/title_activity_seach_bar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <action android:name="android.intent.action.MAIN"/>
