renaming di topping in addition everywhere

--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
 
 
         <activity
-            android:name=".activities.AddToppingsActivity"
+            android:name=".activities.AddChoiceActivity"
             android:theme="@style/DialogTheme">
         </activity>
 
