--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -86,6 +86,9 @@
         <activity
             android:name=".activities.PaymentTypeActivity"
             android:label="@string/title_payment_type_activity_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+            </intent-filter>
         </activity>
 
         <activity
