--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme2">
+        android:theme="@style/AppTheme">
 
 
         <activity
@@ -58,7 +58,7 @@
 
         <activity
             android:name=".activities.AddToppingsActivity"
-            android:theme="@style/DialogTheme">
+            android:theme="@style/Dialog">
         </activity>
 
         <activity
