--- a/iDaBere/app/build.gradle
+++ b/iDaBere/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.google.android.gms:play-services:10.2.4'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.android.support:appcompat-v7:23.2.0'
     testCompile 'junit:junit:4.12'
 }
