--- a/iDaBere/app/build.gradle
+++ b/iDaBere/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.android.support:support-v4:20.+'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'me.pushy:sdk:1.0.28'
     testCompile 'junit:junit:4.12'
 }
