update total price in each activity. views refactoring

--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
 
         <activity
             android:name=".activities.AddChoiceActivity"
-            android:theme="@style/Theme.AppCompat.Dialog.Alert">
+            android:theme="@style/Dialog">
         </activity>
 
         <activity
