--- a/PROVA_SERVER_NODEJS/package.json
+++ b/PROVA_SERVER_NODEJS/package.json
@@ -9,8 +9,13 @@
   "author": "ale",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
+    "crypto": "0.0.3",
     "express": "^4.15.3",
     "mysql": "^2.13.0",
+    "mysql2": "^1.3.5",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "winston": "^2.3.1"
   }
 }
