add deliveryplace activity as parent activity of login activity

--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
         <activity
             android:name=".activities.MenuActivity"
             android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:parentActivityName="it.unitn.disi.lpsmt.idabere.ListBarActivity"
+                android:value="it.unitn.disi.lpsmt.idabere.activities.ListBarActivity"/>
         </activity>
 
         <activity
@@ -81,7 +85,12 @@
         <activity
             android:name=".activities.LoginActivity"
             android:label="@string/title_activity_login"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:parentActivityName="it.unitn.disi.lpsmt.idabere.DeliveryPlaceActivity"
+                android:value="it.unitn.disi.lpsmt.idabere.activities.DeliveryPlaceActivity"/>
+            </activity>
 
 
         <activity
