--- a/iDaBere/app/build.gradle
+++ b/iDaBere/app/build.gradle
@@ -32,5 +32,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.0.1'
     compile 'com.google.code.gson:gson:2.8.0'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.android.volley:volley:1.0.0'
+
     testCompile 'junit:junit:4.12'
 }
