--- a/PROVA_SERVER_NODEJS/package.json
+++ b/PROVA_SERVER_NODEJS/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
     "crypto": "0.0.3",
     "express": "^4.15.3",
     "mysql": "^2.13.0",
