--- a/iDaBere/app/build.gradle
+++ b/iDaBere/app/build.gradle
@@ -20,6 +20,10 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -33,5 +37,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.0'
     compile "com.daimajia.swipelayout:library:1.2.0@aar"
     compile 'me.pushy:sdk:1.0.28'
+
+    compile 'com.github.kenglxn.QRGen:android:2.2.0'
+
+
     testCompile 'junit:junit:4.12'
 }
