--- a/PROVA_SERVER_NODEJS/FAKE_BARMAN/package.json
+++ b/PROVA_SERVER_NODEJS/FAKE_BARMAN/package.json
@@ -9,6 +9,8 @@
   "author": "ale",
   "license": "ISC",
   "dependencies": {
+    "request": "^2.81.0",
+    "request-promise-native": "^1.0.4",
     "sleep": "^5.1.1"
   }
 }
