--- a/iDaBere/app/src/main/AndroidManifest.xml
+++ b/iDaBere/app/src/main/AndroidManifest.xml
@@ -34,7 +34,6 @@
 
         <activity
             android:name=".activities.WelcomeActivity"
-            android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,6 +44,7 @@
 
         <activity
             android:name=".activities.ListBarActivity"
+            android:label="@string/list_bar_activity_name"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
